@@ -1,11 +1,13 @@
 s3cmd 1.0.0
 ===========
-* New command 'sign' for signing for instance
-  the POST upload policies.
+* New command 'sign' for signing e.g. POST upload policies.
 * Fixed handling of filenames that differ only in 
   capitalisation (eg blah.txt vs Blah.TXT).
 * Added --verbatim mode, preventing most filenames 
   pre-processing. Good for fixing unreadable buckets.
+* Added --recursive support for [cp] and [mv], including
+  multiple-source arguments, --include/--exclude, --dry-run, etc.
+
 
 s3cmd 0.9.9   -   2009-02-17
 ===========
